Fix all portfolio cards being too tall on xl screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,3 +44,26 @@ h2 {
     background-size: cover;
     padding-inline: 5% 7%;
 }
+
+#portfolio .card-title {
+    color: #1f7798; /* mid-blue */
+    font-size: 1-2rem;
+}
+
+#portfolio .btn-outline-secondary:hover {
+    background-color: #1f7798;
+}
+
+#portfolio .card-text {
+    min-height: 120px;
+}
+
+/* Media queries */
+
+/* Use Bootstrap breakpoint for XL screens */
+@media screen and (min-width: 1200px) {
+    /* Fixes all portfolio cards being too tall on xl screens */
+    #portfolio .card-text {
+        min-height: auto;
+    }
+}
